@@ -565,6 +565,7 @@ All (GUI):
 - Added wxDataViewListCtrl::GetItemCount() (Kry).
 - Added support for Korean Johab and Vietnamese encodings (jank9201).
 - Fix off by 1 bug with setting font size in points in wxHTML (gevorg).
+- Fix return value of wxGenericListCtrl::InsertColumn() (Sebastian Walderich).
 
 GTK:
 
